--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -165,5 +165,5 @@ jobs:
           python-version: 3.7
       - name: Check out code
         uses: actions/checkout@v1
-      - name: Run tests
+      - name: Run test job ${{ matrix.job }}
         run: ./test.py ${{ matrix.job }}
