--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,56 +108,6 @@ jobs:
           - J098
           - J099
           - J100
-          - J101
-          - J102
-          - J103
-          - J104
-          - J105
-          - J106
-          - J107
-          - J108
-          - J109
-          - J110
-          - J111
-          - J112
-          - J113
-          - J114
-          - J115
-          - J116
-          - J117
-          - J118
-          - J119
-          - J120
-          - J121
-          - J122
-          - J123
-          - J124
-          - J125
-          - J126
-          - J127
-          - J128
-          - J129
-          - J130
-          - J131
-          - J132
-          - J133
-          - J134
-          - J135
-          - J136
-          - J137
-          - J138
-          - J139
-          - J140
-          - J141
-          - J142
-          - J143
-          - J144
-          - J145
-          - J146
-          - J147
-          - J148
-          - J149
-          - J150
     steps:
       - name: Set up Python 3.7
         uses: actions/setup-python@v1
@@ -165,5 +115,5 @@ jobs:
           python-version: 3.7
       - name: Check out code
         uses: actions/checkout@v1
-      - name: Run tests
+      - name: Run test job ${{ matrix.job }}
         run: ./test.py ${{ matrix.job }}
