Reduce matrix and upload artifact.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,105 +9,6 @@ jobs:
       matrix:
         job:
           - J001
-          - J002
-          - J003
-          - J004
-          - J005
-          - J006
-          - J007
-          - J008
-          - J009
-          - J010
-          - J011
-          - J012
-          - J013
-          - J014
-          - J015
-          - J016
-          - J017
-          - J018
-          - J019
-          - J020
-          - J021
-          - J022
-          - J023
-          - J024
-          - J025
-          - J026
-          - J027
-          - J028
-          - J029
-          - J030
-          - J031
-          - J032
-          - J033
-          - J034
-          - J035
-          - J036
-          - J037
-          - J038
-          - J039
-          - J040
-          - J041
-          - J042
-          - J043
-          - J044
-          - J045
-          - J046
-          - J047
-          - J048
-          - J049
-          - J050
-          - J051
-          - J052
-          - J053
-          - J054
-          - J055
-          - J056
-          - J057
-          - J058
-          - J059
-          - J060
-          - J061
-          - J062
-          - J063
-          - J064
-          - J065
-          - J066
-          - J067
-          - J068
-          - J069
-          - J070
-          - J071
-          - J072
-          - J073
-          - J074
-          - J075
-          - J076
-          - J077
-          - J078
-          - J079
-          - J080
-          - J081
-          - J082
-          - J083
-          - J084
-          - J085
-          - J086
-          - J087
-          - J088
-          - J089
-          - J090
-          - J091
-          - J092
-          - J093
-          - J094
-          - J095
-          - J096
-          - J097
-          - J098
-          - J099
-          - J100
     steps:
       - name: Set up Python 3.7
         uses: actions/setup-python@v1
@@ -117,3 +18,7 @@ jobs:
         uses: actions/checkout@v1
       - name: Run test job ${{ matrix.job }}
         run: ./test.py ${{ matrix.job }}
+      - uses: actions/upload-artifact@master
+        with:
+          name: script
+          path: ./test.py
