--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.7
-      - name: Check out code
+      - name: Check out
         uses: actions/checkout@v1
       - name: Run test job ${{ matrix.job }}
         run: ./test.py ${{ matrix.job }}
