--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           python-version: 3.7
       # comment
+      # another comment
       - name: Check out
         uses: actions/checkout@v1
       - name: Run test job ${{ matrix.job }}
